unpackaged/main/default/objects/blng__PaymentAuthorization__c/fields/blng__Account__c.field-meta.xml
<CustomField>
    <fullName>blng__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <inlineHelpText>Compte</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Authorizations</relationshipLabel>
    <relationshipName>Payment_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>