unpackaged/main/default/objects/blng__PaymentAuthorization__c/fields/blng__CurrentAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__CurrentAmount__c</fullName>
    <description>Original Amount that we have a right to collect</description>
    <inlineHelpText>Montant d&#39;origine que nous avons le droit de collecter</inlineHelpText>
    <label>Current Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>