unpackaged/main/default/objects/blng__PaymentAuthorization__c/fields/blng__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__EffectiveEndDate__c</fullName>
    <description>Effective End Date that I have a right to collect</description>
    <inlineHelpText>Date de fin effective que j&#39;ai le droit de collecter</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>