unpackaged/main/default/objects/blng__PaymentAuthorization__c/fields/blng__GatewayReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>blng__GatewayReferenceNumber__c</fullName>
    <description>Unique transaction Id generated by payment gateway</description>
    <inlineHelpText>ID de transaction unique généré par la passerelle de paiement</inlineHelpText>
    <label>Gateway Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>