unpackaged/main/default/objects/blng__PaymentAuthorization__c/fields/blng__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment Method</description>
    <inlineHelpText>Mode de paiement</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>blng__PaymentMethod__c</referenceTo>
    <relationshipLabel>Payment Authorizations</relationshipLabel>
    <relationshipName>Payment_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>