unpackaged/main/default/objects/blng__PaymentAuthorization__c/fields/blng__Source__c.field-meta.xml
<CustomField>
    <fullName>blng__Source__c</fullName>
    <description>Payment Authorization Source</description>
    <inlineHelpText>Source d&#39;autorisation de paiement</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PaymentAuthorizationSource</valueSetName>
    </valueSet>
</CustomField>