unpackaged/main/default/objects/blng__PaymentAuthorization__c/fields/blng__Status__c.field-meta.xml
<CustomField>
    <fullName>blng__Status__c</fullName>
    <description>Payment Authorization Status</description>
    <inlineHelpText>Statut d&#39;autorisation de paiement</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PaymentAuthorizationStatus</valueSetName>
    </valueSet>
</CustomField>